# dream_stellar

./: .gitmodules
doc/: dream_stellar.drawio  presentation.url
include/stellar/: seqan2to3_alphabet.hpp  stellar.hpp  stellar_types.hpp
include/stellar/app/: stellar.main.tpp
include/stellar/app/prefilter/: create_local_query_prefilter.hpp  create_no_query_prefilter.hpp
include/stellar/prefilter/: local_query_prefilter.hpp  no_query_prefilter.hpp
include/stellar/prefilter/detail/: print_minimiser.hpp  reinterpret_as_dna4_sequence.hpp  reverse_complementable_sequence.hpp  valik_local_prefilter.hpp  valik_local_prefilter_search_arguments.hpp  valik_local_prefilter_threshold.hpp  valik_local_query_prefilter_index.hpp
include/stellar/utils/: fraction.hpp
include/stellar/verification/: swift_hit_verifier.hpp
src/: CMakeLists.txt
src/stellar/prefilter/: CMakeLists.txt  local_query_prefilter.cpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt
test/api/stellar/: CMakeLists.txt  query_matches_test.cpp  seqan2to3_alphabet_test.cpp  stellar_index_test.cpp
test/api/stellar/prefilter/: CMakeLists.txt  local_query_prefilter_test.cpp  no_prefilter_test.cpp
test/api/stellar/prefilter/detail/: CMakeLists.txt  build_lqpindex.hpp  minimiser_counter_state.hpp  minimiser_thresholder.hpp  valik_local_prefilter_minimiser_counts_test.cpp  valik_local_prefilter_test.cpp  valik_local_prefilter_threshold_test.cpp
test/api/stellar/test/: CMakeLists.txt
test/api/stellar/test/prefilter/local_query_prefilter/minimiser_window/: CMakeLists.txt  compute_minimiser_blocks.hpp  compute_minimiser_blocks_simd.hpp  compute_minimiser_blocks_test.hpp  diagnostics.hpp  minimiser_window_test.cpp  simd_fn.hpp  simd_fn_test.cpp  simd_minimiser_window.hpp  (+5 more)
test/api/stellar/verification/: all_local_test.cpp  best_local_test.cpp
test/benchmark/: CMakeLists.txt
test/benchmark/prefilter/local_query_prefilter/minimiser_window/: CMakeLists.txt  minimiser_window_benchmark.cpp  transpose_matrix_benchmark.cpp
test/cli/gold_standard/char_both/: 5e-2_minLen20_100kbsplit.gff.stdout  5e-2_minLen20_100kbsplit.txt.stdout
test/cli/gold_standard/char_forward/: 5e-2_minLen20_100kbsplit.gff.stdout  5e-2_minLen20_100kbsplit.txt.stdout
test/cli/gold_standard/dna5_both/: 5e-2_minLen20_100kbsplit.gff.stdout  5e-2_minLen20_100kbsplit.txt.stdout
test/cli/gold_standard/dna5_forward/: 5e-2_minLen20_100kbsplit.gff.stdout  5e-2_minLen20_100kbsplit.txt.stdout
test/cli/gold_standard/dna5_reverse/: 5e-2_minLen20_100kbsplit.gff.stdout  5e-2_minLen20_100kbsplit.txt.stdout
test/cli/gold_standard/dna_both/: 5e-2_minLen20_100kbsplit.gff.stdout  5e-2_minLen20_100kbsplit.txt.stdout
test/cli/gold_standard/dna_forward/: 5e-2_minLen20_100kbsplit.gff.stdout  5e-2_minLen20_100kbsplit.txt.stdout
test/cli/gold_standard/dna_reverse/: 5e-2_minLen20_100kbsplit.gff.stdout  5e-2_minLen20_100kbsplit.txt.stdout
test/cli/gold_standard/protein_both/: 5e-2_minLen20_100kbsplit.gff.stdout  5e-2_minLen20_100kbsplit.txt.stdout
test/cli/gold_standard/protein_forward/: 5e-2_minLen20_100kbsplit.gff.stdout  5e-2_minLen20_100kbsplit.txt.stdout
test/include/stellar/test/prefilter/: expect_storage.hpp
(+18 files in other folders)
